@@ -1,1 +1,1 @@
-consfigurator.asd src usr/share/common-lisp/source/consfigurator/
+consfigurator.asd src tests usr/share/common-lisp/source/consfigurator/
